--- a/SpringBoot-MVC/src/main/resources/static/index.html
+++ b/SpringBoot-MVC/src/main/resources/static/index.html
@@ -17,108 +17,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="./style.css">
+    <script src="./script.js"></script>
     <title>DevEx GPT</title>
-    <style>
-      html,
-      body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
 
-      .container {
-        height: 90%;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-      }
-
-      .chat-container {
-        z-index: 100;
-        width: 40%;
-        margin: 0 auto 20px auto;
-        background-color: #f5f5f5;
-        border-radius: 5px;
-        padding: 10px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        font-family: Arial, sans-serif;
-        overflow-y: auto;
-      }
-
-      .message {
-        background-color: #e3f2fd;
-        padding: 10px;
-        border-radius: 5px;
-        margin-bottom: 10px;
-        animation: send-message 0.5s ease;
-      }
-
-      @keyframes send-message {
-        from {
-          opacity: 0;
-          transform: translateY(10px);
-        }
-        to {
-          opacity: 1;
-          transform: translateY(0);
-        }
-      }
-
-      .user-input {
-        display: flex;
-        align-items: center;
-        margin-bottom: 20px;
-        margin-left: 30%;
-      }
-
-      .user-input input[type="text"] {
-        height: 25px;
-        flex-grow: 1;
-        padding: 8px;
-        border-radius: 3px;
-        border: 1px solid #ccc;
-        max-width: 350px;
-      }
-
-      .user-input button {
-        background-color: #0362ff;
-        color: #fff;
-        text-align: center;
-        width: 100px;
-        border: none;
-        padding: 8px 12px;
-        border-radius: 3px;
-        margin-left: 10px;
-        cursor: pointer;
-      }
-
-      /* Add spinner CSS */
-      .spinner {
-        border: 5px solid #f3f3f3;
-        border-top: 5px solid #3498db;
-        border-radius: 50%;
-        width: 20px;
-        height: 20px;
-        animation: spin 2s linear infinite;
-        display: none; /* Hide initially */
-      }
-
-      .image-logo {
-        position: absolute;
-        top: 30%;
-        left: 45%;
-      }
-
-      /* Spinner animation */
-      @keyframes spin {
-        0% {
-          transform: rotate(0deg);
-        }
-        100% {
-          transform: rotate(360deg);
-        }
-      }
-    </style>
   </head>
   <body>
     <div class="container">
@@ -143,111 +45,5 @@
         <div class="spinner"></div>
       </div>
     </div>
-
-    <script>
-
-      document.addEventListener('DOMContentLoaded', async function() {            
-          let res = await performGetQMAddress();
-          let address = res.data;
-          if(res.status >=200 && res.status<300) {
-
-          }          
-          var addressElement = document.getElementById('mqConsoleBtn').getAttribute('connName');            
-          mqConsoleBtn.setAttribute('connName', address);       
-      });
-
-      const openMQConsole = () => {                  
-        var address = document.getElementById('mqConsoleBtn').getAttribute('connName');                      
-        let URL = `https://${address}:9443/ibmmq/console/login.html`
-        window.open(URL, '_blank').focus();
-      }
-
-      const performGetQMAddress = async () => {
-        try {
-          
-          const response = await fetch(`http://localhost:8080/address`);
-
-          if (!response.ok) {
-            return { status: false, data: "Some errors occured" };
-          }
-
-          const data = await response.json(); 
-          return { status: true, data: data.message };
-        } catch (err) {
-          return { status: false, data: err };
-        }
-      };
-
-      const performSend = async (msg) => {
-        try {
-          const response = await fetch(
-            `http://localhost:8080/send?msg=${encodeURIComponent(msg)}`
-          );
-
-          if (!response.ok) {
-            return { status: false, data: "Some errors occured" };
-          }
-
-          const data = await response.json();
-          return { status: true, data: data.message };
-        } catch (err) {
-          return { status: false, data: err.message };
-        }
-      };
-
-      const performGet = async () => {
-        try {
-          const response = await fetch(`http://localhost:8080/recv`);
-
-          if (!response.ok) {
-            return { status: false, data: "Some errors occured" };
-          }
-
-          const data = await response.json();
-          return { status: true, data: data.message };
-        } catch (err) {
-          return { status: false, data: err };
-        }
-      };
-
-      async function sendMessage() {
-        const messageInput = document.getElementById("message-input");
-        const messageText = messageInput.value.trim();
-
-        if (messageText === "") {
-          alert("Please insert a valid message.");
-          return;
-        }
-
-        const spinner = document.querySelector(".spinner");
-        spinner.style.display = "block";
-        let res = await performSend(messageText);
-
-        if (res.status === true) {
-          addMessage(res.data);
-        } else {
-          addMessage(res.data);
-        }
-
-        spinner.style.display = "none";
-      }
-
-      async function getMessage() {
-        const spinner = document.querySelector(".spinner");
-        spinner.style.display = "block";
-        let msg = await performGet();
-        addMessage(msg.data);
-        spinner.style.display = "none";
-      }
-
-      const addMessage = (msg) => {
-        const chatContainer = document.querySelector(".chat-container");
-        const message = document.createElement("div");
-        message.className = "message";
-        message.textContent = msg;
-        chatContainer.appendChild(message);
-        chatContainer.scrollTop = chatContainer.scrollHeight;
-      };
-    </script>
   </body>
 </html>
